# platonyzer

./: .gitignore  CMakeLists.txt  GNUmakefile.in  LICENSE  README.md  changelog  configure  configure.ac
src/: config.hpp  config.hpp.in  platonyzer.cpp  revision.hpp.in
